--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -30,3 +30,6 @@ test:
 
 production:
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
+  gmail_username: <%= ENV["GMAIL_USERNAME"] %>
+  gmail_password: <%= ENV["GMAIL_PASSWORD"] %>
+
